Feat BE: Update All Controller and Feat FE: Integration Like, Follow, Edit Porfile
